--- a/style.css
+++ b/style.css
@@ -50,18 +50,21 @@
  .main-header-title {
   display: none;
   text-transform: uppercase;
-  margin-left: 0.625em;
+  margin-left: 1.3em;
   color: #00677f;
-  font: 1.125em "Helvetica Neue LT W1G", Helvetica;
+  font: 1em "Helvetica Neue LT W1G", Helvetica;
   font-weight: 600;
  }
  
  .txt-mid, .txt-mid1 {
-  font: 2.375em "Helvetica Neue LT W1G", Helvetica;
+  font: 2em "Helvetica Neue LT W1G", Helvetica;
   font-weight: 400;
   line-height: 1.5em;
   text-align: left;
-  margin-top: 1.25em;
+  margin-top: 0.5em;
+ }
+ .txt-mid1 > span {
+  font-weight: 700;
  }
  .footer {
   display: flex;
@@ -91,6 +94,7 @@
 .footer-first-bootom {
   margin-top: 0.625em;
   color: #c9cacc;
+  font: 0.9em "Helvetica Neue LT W1G", Helvetica;
 }
 
 .footer-second {
@@ -112,6 +116,7 @@
   font-family: "Helvetica Neue LT W1G", Helvetica;
   font-size: 1em;
   cursor: pointer;
+  margin-top: 1em;
 }
 
 .footer-third {
@@ -323,6 +328,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
+  margin-top: -40px;
 }
 .carousel4-inner {
   display: flex;
@@ -343,8 +349,8 @@
 }
 
 .carousel4-dot {
-  width: 0.9375em;
-  height: 0.625em; 
+  width: 0.8375em;
+  height: 0.425em;
   background-color: #fff;
   margin: 0 0.3125em;
   transition: all 0.3s ease;
@@ -356,7 +362,179 @@
   transform: scaleX(1.5);
 }
 
+.carousel5 {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+  display: none;
+}
 
+.carousel5-inner {
+  display: flex;
+  transition: transform 0.5s ease;
+  width: 300%;
+}
+
+.main-header {
+  min-width: 100%;
+  box-sizing: border-box;
+}
+
+@media (max-width: 850px) {
+  .footer-first {
+    width: 100%;
+    order: 2;
+  }
+  .pre-footer-logo {
+    display: none;
+  }
+  .footer-second {
+    width: 50%;
+    order: 1;
+  }
+  .pre-footer-first,
+  .pre-footer-second,
+  .pre-footer-third {
+    width: 100%;
+  }
+  .pre-footer-second {
+    order: 1;
+  }
+  .pre-footer-third {
+    order: 2;
+  }
+  .pre-footer-first {
+    order: 3;
+  }
+  .footer-third {
+    width: 50%;
+    order: 1;
+  }
+  .footer-fourth {
+    width: 100%;
+    order: 4;
+  }
+  .footer-icons {
+    gap: 0;
+  }
+  .connect-top,
+  .connect-bottom {
+    flex-direction: row;
+  }
+  .footer-icons a {
+    margin-left: 0.9375em;
+  }
+  .footer,
+  .pre-footer,
+  .csr-report-four {
+    flex-wrap: wrap;
+  }
+  .footer {
+    margin-top: 9.625em;
+  }
+  .newsroom-about {
+    margin-top: 0;
+    padding: 0 0;
+  }
+  .newsroom-about-title {
+    display: none;
+  }
+  .newsroom-about-main {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    margin: 3.125em 0.4375em;
+  }
+  .newsroom-about-left-heading {
+    font: 1.75em "Helvetica Neue LT W1G", Helvetica; 
+    font-weight: 400;
+    line-height: 1.625em;
+    text-align: left;
+    padding: 0 0.625em;
+    text-shadow: 0 0.25em 0.25em #00000040;
+  }
+  .newsroom-about-left-heading > span {
+    font-weight: 700;
+  }
+  .newsroom-top {
+    font: 1em "Helvetica Neue LT W1G", Helvetica;
+    font-weight: 400;
+    line-height: 1.75em;
+    text-align: left;
+  }
+  .newsroom-right {
+    font-weight: 700;
+    line-height: 1.75em;
+    text-align: left;
+    margin-top: 1.875em;
+  }
+  .animation-btn {
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 500;
+    line-height: 1.2em;
+    letter-spacing: 0.04em;
+    text-align: left;
+    color: #E71316 !important;
+  }
+  .newsroom-about-about {
+    margin-top: -5em;
+    padding: 0 0.75em;
+  }
+  .main-news {
+    width: 100%;
+    height: 26.0625em;
+    margin-top: 4.375em;
+    position: relative;
+  }
+  .main-news > img {
+    width: 100%;
+    height: 100%;
+  }
+  .main-poistion {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .image-txt {
+    position: absolute;
+    top: 2.5em;
+    left: 2.5em;
+    color: #fff;
+  }
+  .main-cover {
+    width: 62%;
+    height: 100%;
+    object-fit: fill;
+  }
+  .txt-mid {
+    display: none;
+  }
+  .txt-top {
+    display: none;
+  }
+  .txt-slider {
+    top: 0.0625em;
+  }
+  .main-header-title{
+    display: block;
+  }
+  .carousel5 {
+    display: block;
+  }
+  .main-btn-newsroom{
+    display: none;
+  }
+}
+
+@media (min-width: 900px) {
+  body {
+    font-size: 0.71000em;
+  }
+ }
 
  @media (min-width: 1100px) {
   body {
