--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  overflow-x: hidden;
+}
 .main-news {
   width: 100%;
   margin-top: 4.375em;
@@ -328,7 +331,6 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  margin-top: -40px;
 }
 .carousel4-inner {
   display: flex;
@@ -388,6 +390,125 @@
   color: red !important;
 }
 
+.podcast{
+  height: auto;
+  padding: 3.125em 6.25em;
+  margin-top: 1.875em;
+ }
+ .podcast-title {
+  color: var(--Accent-Teal, #00677f);
+  font: 1.125em "Helvetica Neue LT W1G", Helvetica;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.375em;
+  letter-spacing: 0.1125em;
+  text-transform: uppercase;
+  white-space: nowrap;
+  margin-bottom: 3.125em;
+ }
+ .main-podcast{
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 2.5em;
+ }
+ .podcast-left, .podcast-right{
+  width: 50%;
+  height: auto;
+  background-color: rgba(245, 245, 245, 1);
+  display: flex;
+  align-items: center;
+  gap: 1.25em;
+ }
+ .podcast-play{
+  display: flex;
+  align-items: center;
+  gap: 0.625em;
+  margin-top: -1em;
+ }
+ .podcast-top{
+  font: 1em "Helvetica Neue LT W1G", Helvetica;
+  font-weight: 500;
+  line-height: 1.5em;
+  margin: 1.25em 0;
+  text-align: left;
+ }
+ .play-text{
+  font: 0.875em "Helvetica Neue LT W1G", Helvetica;
+  font-weight: 500;
+  line-height: 1.375em;
+  text-align: left;
+  color: rgba(231, 19, 22, 1);
+  margin-right: 0.625em;
+ }
+ .podcast-text{
+  flex: 1;
+ }
+ .c-para{
+  display: none;
+ }
+ .round:hover {
+  background-color: red;
+ }
+ .podcast-btn{
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+  margin-top: 2.5em;
+  margin-left: 0.9375em;
+ }
+ .podcast-btn > p {
+  font: 1em "Helvetica Neue LT W1G", Helvetica;
+  font-weight: 500;
+  line-height: 1.2em;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #4A4A4A;
+ }
+ .podcast-btn > img {
+  width: 1em;
+ }
+ .def1{
+  width: 30%;
+ }
+ .def1 > img {
+  width: 100%;
+ }
+ .animation-btn {
+  cursor: pointer;
+  font: 0.7em "Helvetica Neue LT W1G", Helvetica;
+  font-weight: 500;
+  line-height: 1.2em;
+  letter-spacing: 0.04em;
+  text-align: left;
+  color: #4A4A4A;
+ }
+ .round {
+  width: 1.875em;
+  height: 1.875em;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #222222;
+  cursor: pointer;
+ }
+ .round > img {
+  width: 0.5em;
+ }
+
+ #blur-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px); /* Apply the blur effect */
+  background: rgba(255, 255, 255, 0.3); /* Optional: to darken the background slightly */
+  z-index: 1; /* Ensure the blur is below the navbar and dropdown */
+  display: block;
+}
+
 @media (max-width: 850px) {
   .footer-first {
     width: 100%;
@@ -438,7 +559,7 @@
     flex-wrap: wrap;
   }
   .footer {
-    margin-top: 9.625em;
+    margin-top: 0;
   }
   .newsroom-about {
     margin-top: 0;
@@ -535,6 +656,87 @@
   }
   .main-btn-newsroom{
     display: none;
+  }
+  .podcast{
+    height: auto;
+    padding: 0;
+    margin-top: 3.125em;
+  }
+  .podcast-title {
+    color: var(--Accent-Teal, #00677f);
+    font: 0.875em "Helvetica Neue LT W1G", Helvetica;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.375em;
+    letter-spacing: 0.1125em;
+    text-transform: uppercase;
+    white-space: nowrap;
+    margin-bottom: 1.5625em;
+    margin-left: 0.625em;
+  }
+  .main-podcast{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    gap: 2.5em;
+  }
+  .podcast-left, .podcast-right{
+    width: 100vw;
+    height: auto;
+    background-color: rgba(245, 245, 245, 1);
+    display: flex;
+    align-items: start;
+    gap: 1.25em;
+  }
+  .podcast-play{
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    gap: 0.625em;
+    margin-top: 1.25em;
+    flex-direction: column;
+  }
+  .podcast-top{
+    font: 1em "Helvetica Neue LT W1G", Helvetica;
+    font-weight: 500;
+    line-height: 1.5em;
+    margin-top: 1.25em;
+    text-align: left;
+    display: none;
+  }
+  .podcast-top2{
+    font: 1em "Helvetica Neue LT W1G", Helvetica;
+    font-weight: 500;
+    line-height: 1.5em;
+    margin-top: 1.25em;
+    text-align: left;
+  }
+  .play-text{
+    font: 0.875em "Helvetica Neue LT W1G", Helvetica;
+    font-weight: 600;
+    line-height: 1.375em;
+    text-align: left;
+    color: rgba(231, 19, 22, 1);
+    margin-top: -0.0625em;
+    margin-right: 0.625em;
+  }
+  .c-para {
+   font: 1.3125em "Helvetica Neue LT W1G", Helvetica;
+   font-weight: 400;
+   padding-left: 0.3125em;
+   margin-top: 0.1875em;
+   line-height: 1.875em; 
+   display: block !important;
+   width: 331% !important;
+  }
+  .podcast-btn > img, .leadershipn-btn > img, .leadership-btn > img {
+    display: none;
+  }
+  .podcast-btn > p, .leadershipn-btn > p, .leadership-btn > p {
+    font: 1.3125em "Helvetica Neue LT W1G", Helvetica;
+    font-weight: 600;
+    text-transform: uppercase;
   }
 }
 
